--- a/style.css
+++ b/style.css
@@ -1,1 +1,31 @@
 /* Write your CSS Here. */
+ body {
+    font-family: sans-serif;
+    background: #222;
+    color: white;
+    font-size: 2vw;
+    text-align: center;
+    padding: 1em;
+    background: linear-gradient(180deg, #2E2E3A 0%, #0C0C2C 100%);
+ }
+ 
+ .top-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-shadow: var(--text-shadow);
+ }
+ .score {
+    display: flex;
+    align-items: center;
+ }
+ .score-count {
+    color: red;
+    font-size: 2em;
+    font-weight:bold;
+    margin-left: 0.2em;
+ }
+ 
+button {
+font-size: large;
+}
