--- a/style.css
+++ b/style.css
@@ -1,31 +1,45 @@
 /* Write your CSS Here. */
- body {
-    font-family: sans-serif;
-    background: #222;
-    color: white;
-    font-size: 2vw;
-    text-align: center;
-    padding: 1em;
-    background: linear-gradient(180deg, #2E2E3A 0%, #0C0C2C 100%);
- }
- 
- .top-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-shadow: var(--text-shadow);
- }
- .score {
-    display: flex;
-    align-items: center;
- }
- .score-count {
-    color: red;
-    font-size: 2em;
-    font-weight:bold;
-    margin-left: 0.2em;
- }
- 
+body {
+  font-family: sans-serif;
+  background: #0a0a2b;
+  color: white;
+  font-size: 2vw;
+  text-align: center;
+  padding: 1em;
+}
+.title {
+  color: rgb(42, 157, 165);
+}
+
+.top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-shadow: var(--text-shadow);
+}
+.score {
+  display: flex;
+  align-items: center;
+}
+.score-count {
+  color: red;
+  font-size: 2em;
+  font-weight: bold;
+  margin-left: 0.2em;
+}
+
+h3 {
+  color: rgb(77, 141, 167);
+}
 button {
-font-size: large;
+  background-color: black;
+
+  color: #fff;
+  font-size: 15px;
+  padding: 4px 15px;
+  font-family: "Roboto Mono", Roboto, sans-serif;
+}
+
+.game-over {
+  color: red;
 }
